--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,40 @@
 /* your code here */
+.content{
+    background-color: black;
+    color: white;
+    padding: 10px 25px 35px;
+}
+
+div{
+    display: flex;
+    flex-direction: column;
+}
+
+
+a{
+    color: white;
+    font-size: 16px;
+    text-decoration: none;
+    margin-bottom: 15px;
+}
+
+.link-boxes{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.bottom-details{
+    color: white;
+    background-color: slategrey;
+    padding: 15px 25px 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.media-icons{
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-content: space-between;
+}
